--- a/proveit/app/templates/proveit/boilerplate.html
+++ b/proveit/app/templates/proveit/boilerplate.html
@@ -1,23 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 	{% load staticfiles %}
 	<link rel="stylesheet" type="text/css" href="{% static "proveit/css/normalize.css" %}">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="{% static "proveit/css/main.css" %}">
+	<link rel="stylesheet" type="text/css" href="{% static "proveit/css/bootstrap.css" %}">
+	<link rel="stylesheet" type="text/css" href="{% static "proveit/css/bootstrap-theme.css" %}">
+	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
 	<title>{% block title %}{% endblock %}</title>
 </head>
-<body>
-	<div>
-	{% if not username %}
-		<p>Hello, anon</p>
-		<p><a href="/login">Sign in</a> / <a href="/signup">Sign Up</a></p>
-	{% else %}
-		<p>Hello, {{ username }}</p>
-		<p><a href="/logout">Log out</a></p>
-	{% endif %}
+<body role="document">
+	<div class="navbar navbar-inverse" role="navigation">
+		<div class="container">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+		            <span class="sr-only">Toggle navigation</span>
+		            <span class="icon-bar"></span>
+		            <span class="icon-bar"></span>
+		            <span class="icon-bar"></span>
+		          </button>
+				<a class="navbar-brand" href="/">Prove it</a>
+			</div>
+			<div class="navbar-collapse collapse">
+				<div id="personal">
+					<ul class="nav navbar-nav">
+					{% if not username %}
+						<li><a href="/login">Sign in</a></li>
+						<li><a href="/signup">Sign Up</a></li>
+					{% else %}
+						<li>Hello, {{ username }}</li>
+						<li><a href="/logout">Log out</a></li>
+					{% endif %}
+					</ul>
+				</div>
+			</div>
+		</div>
 	</div>
-	<div id="content">
-		{% block content %}{% endblock %}
+	<div class="container" role="main">
+		<div id="content">
+			{% block content %}{% endblock %}
+		</div>
 	</div>
+	<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+	<script type="text/javascript" src="{% static "proveit/js/bootstrap.js" %}"></script>
 </body>
 </html>
